tc_tests/intarr.pass
void fun(int *b) {
	*b = 50;
}

char main()
{
	int *a;
	int b[4];
	char c[4];
	b[0] = 32;
	b[1] = 16;
	b[2] = 8;
	b[3] = 20;
  c[0] = 2;
  c[1] = 3;
  c[2] = 4;

  a = b + 2;
  a = b - 1;
  *a = b[3] - 1;
  a = &b[3] - 2; 
  *a = c[3] - 1; 
//  a = &c[3] - 2; //error
//  b = a; //error

  c[1] = b[c[2]] - 2; 
//  c[2] = b[c] - 2;  //error
  b[2] = c[*a] + 2; 
//  b[3] = c[a] + 2;  //error

  *a = c[1] + b[2];
//  c = c + b[2]; //error
//  b = b[1] + c; //error
//  c = c[1] + b; //error
//  b = b + c[2]; //error

  fun(&b[3]);
	return b[3];
}
